# pico-examples

pico_w/bt/: CMakeLists.txt  JLINK_MONITOR.c  JLINK_MONITOR.h  JLINK_MONITOR_ISR_SES.S
pico_w/bt/standalone/server/: CMakeLists.txt
